--- a/Mugiwara/style.css
+++ b/Mugiwara/style.css
@@ -9,7 +9,7 @@ header{
     background-image: linear-gradient(to bottom, #10C5DA 20%,#1840B1);
     height: 200px;
     margin-bottom: 8px;
-
+    width: 500px;
 
 }
 
@@ -39,6 +39,7 @@ header > h1{
     border: solid 3px;
     padding: 5px;
     box-shadow: 5px 5px 2px;
+    text-indent: 20px;
 }
 
 .nome > h2{
