--- a/Mugiwara/style.css
+++ b/Mugiwara/style.css
@@ -9,8 +9,6 @@ header{
     background-image: linear-gradient(to bottom, #10C5DA 20%,#1840B1);
     height: 200px;
     margin-bottom: 8px;
-    width: 500px;
-
 }
 
 header > h1{
@@ -31,7 +29,8 @@ header > h1{
 .texto{
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
-    width: 480px;
+    min-width: 450px;
+    max-width: 800px;
     margin-left: 10px;
     margin-right: 10px;
     font-size: 15px;
@@ -40,6 +39,8 @@ header > h1{
     padding: 5px;
     box-shadow: 5px 5px 2px;
     text-indent: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .nome > h2{
@@ -48,9 +49,13 @@ header > h1{
     color: black;
     margin-left: 5px
 }
-#rodape > h3{
-    height: 30px;
+footer{
+    height: 25px;
     background-color: black;
-    color: aliceblue;
-    margin: 0px;
+    display: block;
+}
+#rodape{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
