--- a/Mercado/style.css
+++ b/Mercado/style.css
@@ -143,3 +143,11 @@ ul{
     margin-left: 0px;
     transition: all 2s;
 }
+@media(max-width: 600px){
+    .images img{
+        width: 400px;
+    }
+    .slide{
+        width: 400px;
+    }
+}
