--- a/planta-medicina/style.css
+++ b/planta-medicina/style.css
@@ -36,10 +36,14 @@
         grid-template-columns: repeat(2 , 1fr);
     }
 }
-@media (min-width: 500px) {
+@media (max-width: 500px)  {
     .planta {
         width: 300px;
         height: 400px;
+    }
+    #img {
+        width: 380px;
+        height: 45px;
     }
 }
 
