--- a/planta-medicina/style.css
+++ b/planta-medicina/style.css
@@ -7,13 +7,19 @@
     background-color: rgb(60, 160, 60);
 }
 #logo{
-    margin: auto;
+    margin-left: 2px;
     background-color: white;
-    margin-top: 2px;
+    margin-top: 1px;
     margin-bottom: 2px;
     padding: 0 0 0 3px;
+    border-radius: 1px 10px;
 }
-
+#menunav{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 5%;
+}
 #conteudo{
     display: flex;
     width: 100%;
@@ -36,7 +42,7 @@
         grid-template-columns: repeat(2 , 1fr);
     }
 }
-@media (max-width: 500px)  {
+@media (max-width: 650px)  {
     .planta {
         width: 300px;
         height: 400px;
