--- a/planta-medicina/style.css
+++ b/planta-medicina/style.css
@@ -56,7 +56,7 @@ a{
         grid-template-columns: repeat(2 , 1fr);
     }
 }
-@media (max-width: 650px)  {
+/*@media (max-width: 650px)  {
     .planta {
         width: 300px;
         height: 400px;
@@ -65,6 +65,13 @@ a{
         width: 380px;
         height: 45px;
     }
+}*/
+@media (max-width: 600px){
+    #img{
+        width: 250px;
+        height: 32px;
+    }
+
 }
 
 
